# connected-k-center

./: .gitignore  LICENSE  README.md  build_extension.py  pyproject.toml
.github/workflows/: gitlab.yml  mypy-flake-test.yml  publish.yml
connected_k_center/: __init__.py  _core.cpp  core.py  io.py
connected_k_center/cpp/: clustering.cpp  geometry.cpp  graph.cpp  graph_utils.cpp  solver.cpp
connected_k_center/cpp/connected_k_center/: clustering.hpp  geometry.hpp  graph.hpp  graph_utils.hpp  solver.hpp  types.hpp
connected_path_graph_clustering/: __init__.py  _core.cpp  core.py
connected_path_graph_clustering/cpp/: graph_utils.cpp
connected_path_graph_clustering/cpp/connected_k_center/: clustering.hpp  geometry.hpp
tests/: test_io.py  test_pathckc.py
tests/data/: tc3_two_groups.csv  tc4_k_too_small.csv  tc5_two_components.csv  tc6_asymmetric.csv  tc7_three_groups_exact_k.csv  tc8_coordinates_independent_path.csv  tc9_2d_points.csv
